2004-08-31  Rodrigo Moya <rodrigo@novell.com>

	Fixes #62392

	* gui/alarm-notify/alarm-queue.c (display_notification): ref the
	client's query object so that it doesn't disappear on us.
	(tray_icon_destroyed_cb): unref the query previously ref'ed.

2004-08-31  Rodrigo Moya <rodrigo@novell.com>

	* gui/e-cal-model-tasks.c: include missing string.h, to avoid
	problems in 64 bit builds.

2004-08-28  JP Rosevear  <jpr@novell.com>

	* gui/e-itip-control.c (rsvp_clicked_cb): get the active state
	(insert_rsvp): set inital rsvp state

	* gui/alarm-notify/alarm-queue.c (alarm_queue_add_client): load
	immediately if they are loaded

2004-08-27  Rodrigo Moya <rodrigo@novell.com>

	* gui/alarm-notify/alarm-queue.c (load_alarms): use the
	new 'has-alarms-in-range' query.
	(alarm_queue_add_client): make sure we don't add twice the same alarm.

2004-08-27  JP Rosevear  <jpr@novell.com>

	Fixes #62911, #54101
	
	* gui/e-itip-control.c (set_ok_sens): util routine to set
	sensitivity of OK button
	(cal_opened_cb): cal back when calendar opens, sensitize ok button
	(start_calendar_server): open async and take call back arg
	(source_selected_cb): desensitize ok button until calendar is
	loaded
	(find_cal_opened_cb): check to see if the calendar contains the
	object we are looking for, if none do show the source selector
	option menu
	(find_server): search async for the server
	(destroy): clean up html widget
	(finalize): instead of here
	(get_publish_options): use only object tag
	(get_request_options): ditto
	(get_request_fb_options): ditto
	(get_reply_options): ditto
	(get_refresh_options): ditto
	(get_cancel_options): ditto
	(show_current_event): use new options, remove groupwise NEEDS
	ACTION check, handle async loading
	(show_current_todo): use new options, handle async loading
	(option_activated_cb): record action
	(add_option): add action item
	(insert_boxes): layout widgets
	(insert_label): insert label
	(rsvp_clicked_cb): record rsvp status